Change our tagPolicy to match the changed API in Caja's HTML sanitizer. Fix extraneous line spacing that appeared due to CL 36995697. ------------- Created by MOE: http://code.google.com/p/moe-java MOE_MIGRATED_REVID=37133689

--- a/resource/main.css
+++ b/resource/main.css
@@ -398,10 +398,10 @@ html, body {
   -ms-box-shadow:0 4px 16px rgba(0,0,0,0.2);
   box-shadow:0 4px 16px rgba(0,0,0,0.2);
 }
-.cm-popup :first-child {
+.cm-popup > :first-child {
   margin-top:0;
 }
-.cm-popup :last-child {
+.cm-popup > :last-child {
   margin-bottom:0;
 }
 .cm-close-button {
